Disable IGDB integration as default
The `Igdb` configuration in `appsettings.json` has been updated:
- The `Enabled` property was set to `false`, disabling IGDB integration.

--- a/appsettings.json
+++ b/appsettings.json
@@ -11,8 +11,8 @@
   // Optional: IGDB API for enhanced game metadata
   // Get credentials from https://dev.twitch.tv/console/apps
   "Igdb": {
-    "Enabled": true,
-    "ClientId": "euzk0d9kgynknd8cr6rj1z4x8svgvt",
-    "ClientSecret": "9hgcx2z4udnv19qtamoc4y8yzzbqem"
+    "Enabled": false,
+    "ClientId": "",
+    "ClientSecret": ""
   }
 }
