feat: auto-restart Heroic and add cache refresh option
- Auto-restart Heroic launcher after processing completes if it was closed by the app
  * Captures exe path from running process before closing
  * Falls back to common install paths (Windows LocalAppData, Program Files, Linux /usr/bin)
  * Only restarts if WasClosedByUs flag is set

- Add --refresh-cache CLI parameter to clear IGDB metadata cache and re-fetch from source
  * Adds RefreshCache property to AppConfig
  * Implements Clear() method in IReleaseDateCache interface
  * Clears cache before enrichment when flag is set

- Fix invalid JSON syntax in appsettings.json
  * Add missing comma after NileLibraryPath
  * Remove unsupported // comments

--- a/appsettings.json
+++ b/appsettings.json
@@ -6,10 +6,8 @@
   "HeroicConfigPath": "%AppData%\\heroic\\store\\config.json",
   "LegendaryLibraryPath": "%AppData%\\heroic\\store_cache\\legendary_library.json",
   "GogLibraryPath": "%AppData%\\heroic\\store_cache\\gog_library.json",
-  "NileLibraryPath": "%AppData%\\heroic\\store_cache\\nile_library.json"
+  "NileLibraryPath": "%AppData%\\heroic\\store_cache\\nile_library.json",
 
-  // Optional: IGDB API for enhanced game metadata
-  // Get credentials from https://dev.twitch.tv/console/apps
   "Igdb": {
     "Enabled": false,
     "ClientId": "",
